--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,33 @@
-filelock==3.17.0
-fsspec==2025.2.0
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+contourpy==1.3.1
+cycler==0.12.1
+Flask==3.1.0
+fonttools==4.56.0
+gunicorn==23.0.0
+idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.5
+joblib==1.4.2
+kagglehub==0.3.8
+kiwisolver==1.4.8
 MarkupSafe==3.0.2
-mpmath==1.3.0
-networkx==3.4.2
-numpy==1.26.4
+matplotlib==3.10.0
+numpy==2.2.3
+packaging==24.2
+pandas==2.2.3
 pillow==11.1.0
-pytorch-triton-rocm @ file:///run/media/jorge/WHITE/stable-diffusion-webui-forge/pytorch_triton_rocm-3.0.0%2Brocm6.3.2.75cc27c26a-cp312-cp312-linux_x86_64.whl#sha256=344060421328a74fb3706f9b63ae8db3f3120c19e44c52955b36cc8e5461c3e6
-setuptools==75.8.0
-sympy==1.12.1
-torch @ file:///run/media/jorge/WHITE/stable-diffusion-webui-forge/torch-2.4.0%2Brocm6.3.2-cp312-cp312-linux_x86_64.whl#sha256=87ebc87b0188ff2a97148aa298982ef082580df4c509cea5de1326e1ba298062
-torchaudio @ file:///run/media/jorge/WHITE/stable-diffusion-webui-forge/torchaudio-2.4.0%2Brocm6.3.2-cp312-cp312-linux_x86_64.whl#sha256=fbad615e17225246717c4bfdb0b000dccf70e4a3124420bf29123efa95f2eb9b
-torchvision @ file:///run/media/jorge/WHITE/stable-diffusion-webui-forge/torchvision-0.19.0%2Brocm6.3.2-cp312-cp312-linux_x86_64.whl#sha256=6c8cdc649212c13d031d74aab25faaf0ba68d766dd56e5a1b26a6e40366e0290
-typing_extensions==4.12.2
-wheel==0.45.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+pytz==2025.1
+requests==2.32.3
+scikit-learn==1.6.1
+scipy==1.15.1
+six==1.17.0
+threadpoolctl==3.5.0
+tqdm==4.67.1
+tzdata==2025.1
+urllib3==2.3.0
+Werkzeug==3.1.3
